// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`storage-settings-junit-form Renders \`storage-settings-junit-form\` with custom form and history 1`] = `
<div
  class="layout c-information-block column"
>
  <div
    class="layout"
  >
    <div
      class="text-subtitle-1 font-weight-bold"
    >
      JUnit
    </div>
    <!---->
  </div>
  <div
    class="layout mt-2"
  >
    <span
      class="text--secondary"
    >
      <storage-settings-history-message-stub
        history="1611210000"
      />
    </span>
  </div>
  <c-enabled-duration-field-stub
    help-text="(XMLs, screenshots, videos)"
    hide-value-on-false=""
    label="Delete test suites data"
    name="junit.delete_after"
    suffix="Older than"
    switcher=""
  />
</div>
`;

exports[`storage-settings-junit-form Renders \`storage-settings-junit-form\` with default form 1`] = `
<div
  class="layout c-information-block column"
>
  <div
    class="layout"
  >
    <div
      class="text-subtitle-1 font-weight-bold"
    >
      JUnit
    </div>
    <!---->
  </div>
  <!---->
  <c-enabled-duration-field-stub
    help-text="(XMLs, screenshots, videos)"
    hide-value-on-false=""
    label="Delete test suites data"
    name="junit.delete_after"
    suffix="Older than"
    switcher=""
    value="[object Object]"
  />
</div>
`;
